# follow_with_head

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
error_msgs/: CMakeLists.txt  package.xml
error_msgs/msg/: PanTiltError.msg
follow_with_head/: CMakeLists.txt  package.xml
follow_with_head/config/: params.yaml
follow_with_head/include/follow_with_head/: DepthEstimator.hpp  HeadController.hpp
follow_with_head/launch/: depth_estimator.launch.py  head_follow_controller.launch.py  hsv_filter.launch.py  whole.launch.py
follow_with_head/src/: depth_main.cpp  head_controller_main.cpp  hsv_filter_main.cpp  whole.cpp
follow_with_head/src/follow_with_head/: DepthEstimator.cpp  HSVFilter.cpp  HeadController.cpp
include/follow_with_head/: DepthEstimator.hpp  HSVFilter.hpp  HeadController.hpp  PID.hpp
launch/: _follow_with_head.launch.py  depth_estimator.launch.py  follow_with_head.launch.py  head_controller.launch.py  head_follow_controller.launch.py  hsv_filter.launch.py
src/: depth_main.cpp  head_controller_main.cpp  hsv_filter_main.cpp
src/follow_with_head/: DepthEstimator.cpp  HSVFilter.cpp  HeadController.cpp  PID.cpp
