<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follow_with_head</name>
  <version>0.2.0</version>
  <description>A simple behavior for a robot to go in circles</description>
  <maintainer email="rodrigo.perez@urjc.es">Rodrigo Pérez-Rodríguez</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_geometry</depend>
  <depend>depth_image_proc</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>